# open-unified-tts-simple

./: .env.production.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_TUTORIAL.md  DEMO_RECORDING_SCRIPT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.studio  FAQ.md  IMPROVEMENTS.md  LICENSE  MCP_GUIDE.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  ROADMAP.md  STUDIO_USER_GUIDE.md  VPS_DEPLOYMENT_STATUS.md  docker-compose.kokoro.yml  docker-compose.production.yml  docker-compose.studio.yml  docker-compose.vibevoice.yml  docker-compose.voxcpm.yml  frankenstein_ch5.txt  nginx-production.conf  requirements-studio.txt  requirements.txt  server.py  studio.py  studio_v2.py
mcp-server/: install.sh  pyproject.toml  server.py
test_scripts/: multi_speaker_demo.txt
