[project]
name = "unified-tts-simple-mcp"
version = "1.0.0"
description = "MCP server for Open Unified TTS Simple"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
unified-tts-simple-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
